Sync both awslogs.conf files
Add second template and notify event for restart

--- a/tasks/conf.yml
+++ b/tasks/conf.yml
@@ -16,6 +16,7 @@
     owner: root
     group: root
     mode: 0644
+    notify: Restart awslogs service
 
 - name: "Configure AWS CloudWatch Logs Agent - Region"
   template:
