--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,7 @@
 ---
 # handlers file for ansible-aws-cloudwatch-logs-agent
+
+- name: Restart awslogs service
+  service:
+    name: awslogs
+    state: restarted
